Revision history for libapreq-1

=over 4

=item 1.30 - September 27, 2003

libapreq-1.3 is released.

=item 1.25 - August 23, 2003

Michael G. Schwern's "play it safe" patch to c/Makefile.PL
(applied patch submitted by Steve Hay). See 

  http://marc.theaimsgroup.com/?l=perl5-porters&m=105981649201380&w=2
  http://marc.theaimsgroup.com/?l=apreq-dev&m=106146287323705&w=2

for details. [joes]

=item 1.24 - August 23, 2003

Applied Steve Hay's Request.pm doc patch explaining the tempnam()
dependence for C<Apache::Request::new()>'s TEMP_DIR option. [joes]

=item 1.23 - July 10, 2003

Applied Graham Clark's patch to cleanup apache_request.h macros.
Added missing doc credits for Steve Hay in Request.pm. [joes]

=item 1.22 - July 5, 2003

Open uploaded files with binary mode (relevant for Perl > 5.7),
so as to be able to get the correct sizes on systems where such
a mode makes a difference. Thanks to Steve Hay for first pointing
out this problem. [randyk]

=item 1.21 - June 25, 2003

Fix memory access problem with TEMP_DIR - see
http://marc.theaimsgroup.com/?l=apreq-dev&m=105647058517842&w=2
Thanks to Jay Buffington for the spot.  [joes]

=item 1.2 - June 19, 2003

libapreq-1.2 released.

=item 1.16 - June 19, 2003

Updated INSTALL & README documents to explain how to configure the tests.
Apache::Test v1.03 is now a prerequisite for libapreq.

=item 1.15 - June 13, 2003

Experimental support for SFIO is withdrawn.

=item 1.14 - April 30, 2003

Add documentation for subclassing Apache::Request. [Steve Hay]

=item 1.13 - April 18, 2003

Sync test suite uris with latest Apache::Test [Stas]

Patch mfd parser's Content-Disposition header to do case-insensitive
matches on "name" & "filename" keywords.  This feature allows uploads
from Nokia Series 60 phones to work as expected. [Oskari 'Okko' Ojala]

Patch Request.xs to revert to using pre-1.1 $upload->fh code for
pre-5.8 perls.  This patch may get backed out prior to 1.2's release,