@@ -2,6 +2,13 @@ Revision history for libapreq-1
 
 =over 4
 
+=item 1.31 - ongoing
+
+added a proper implementation of the ithreads support. At the same
+time it should resolve the problem with perl 5.8.2 under threaded
+applications, since it no longer relies on the implicit context and
+passes aTHX around. [Stas]
+
 =item 1.30 - September 27, 2003
 
 libapreq-1.3 is released.
